--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,6 @@ body {
 	box-shadow: rgba(100, 100, 100, 0.2) 0px 0px 29px 0px;
 	padding: 0px 20px;
 }
+button {
+	font-family: 'NanumPenScript';
+}
